# cityvibe

./: .cursorrules  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  pyproject.toml  pyrightconfig.json
alembic/: .gitkeep
apps/: .gitkeep
apps/web/: .prettierignore  package-lock.json  package.json
apps/web/app/: actions.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/components/: account-menu.tsx  chat-history.tsx  chat-sidebar.tsx  city-walk.tsx  event-card.tsx  login-dialog.tsx  preferences-dialog.tsx  walk-list.tsx  weather-event-card.tsx
apps/web/components/ui/: button.tsx  dialog.tsx  toast.tsx
docs/: ARCHITECTURE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SOURCE_INTEGRATION.md  cityvibe_arch.drawio
docs/api/: .gitkeep
docs/deployment/: .gitkeep
infrastructure/: README.md
infrastructure/kubernetes/: .gitkeep
infrastructure/scripts/: .gitkeep
infrastructure/terraform/: .gitkeep
notebooks/: debuik-scraper.ipynb  iamsterdam scraper.ipynb
services/api/: pyproject.toml
services/api/src/api/: __init__.py
services/mcp-server/: pyproject.toml
services/mcp-server/src/mcp_server/: __init__.py
services/scheduler/: pyproject.toml
services/scheduler/src/scheduler/: __init__.py
services/workers/: README.md  pyproject.toml
services/workers/src/workers/: __init__.py
services/workers/src/workers/scrapers/: __init__.py  base.py  example_scraper.py  filmladder_scraper.py  iamsterdam_scraper.py
services/workers/src/workers/tasks/: __init__.py
services/workers/src/workers/tasks/etl/: __init__.py  process_events.py
services/workers/src/workers/tasks/scraping/: __init__.py
services/workers/tests/scrapers/: __init__.py  test_filmladder_scraper.py  test_filmladder_scraper_integration.py  test_iamsterdam_scraper.py  test_iamsterdam_scraper_integration.py
