[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server for LLM event queries"
requires-python = ">=3.13"
dependencies = [
    "mcp>=0.9.0",
    "cityvibe-core",
    "cityvibe-common",
]

[tool.uv.sources]
cityvibe-core = { workspace = true }
cityvibe-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server = "mcp_server.main:main"
